tests/fixtures/valid/arithmetic.airl
;; EXPECT: 10
(+ (* 2 3) 4)
