tests/fixtures/type_errors/unclosed_paren.airl
;; ERROR: unclosed
(+ 1 2
